--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
                 ],
                 outfitTip: 'Warm undertones look radiant in earth tones. Try soft beige tops to highlight your natural glow and always choose gold jewelry.',
                 outfits: [
-                    { item: 'Kemeja Linen', color: 'Soft Beige', reason: `Aksen warna netral hangat yang sempurna untuk kegiatan sehari-hari.`, imageUrl: 'https://placehold.co/400x150/F5F5DC/33303A?text=Kemeja+Linen+Coklat+Muda' },
+                    { item: 'Kemeja Linen', color: 'Soft Beige', reason: `Aksen warna netral hangat yang sempurna untuk kegiatan sehari-hari.`, imageUrl: 'https://www.russ.co.id/cdn/shop/files/ginee_20230905170323117_1172060070_800x.png?v=1739795370' },
                     { item: 'Celana Kulot', color: 'Terracotta', reason: `Memberikan warna dasar yang kaya dan seimbang.`, imageUrl: 'https://placehold.co/400x150/E2725B/FFFFFF?text=Celana+Kulot+Merah+Bata' },
                     { item: 'Aksesori Emas', color: 'Gold (Kuning)', reason: `Emas melengkapi rona hangat kulit Anda secara alami.`, imageUrl: 'https://placehold.co/400x150/FFD700/000000?text=Anting+Emas+Model+Simple' },
                     { item: 'Scarf Motif', color: 'Mustard', reason: `Bawa warna komplementer dekat dengan wajah Anda.`, imageUrl: 'https://placehold.co/400x150/FFDB58/33303A?text=Scarf+Motif+Coklat+Kuning' },
                 ],
                 cultural: [
-                    { style: 'Balinese Kebaya', description: 'Kebaya dengan sulaman **emas** yang rumit meningkatkan kehangatan Anda.', colors: ['Gold', 'Dark Red'] },
+                    { style: 'Balinese Kebaya', description: 'Kebaya dengan sulaman **emas** yang rumit meningkatkan kehangatan Anda.', imageUrl: 'https://www.russ.co.id/cdn/shop/files/ginee_20230905170323117_1172060070_800x.png?v=1739795370', colors: ['Gold', 'Dark Red'] },
                     { style: 'Palembang Songket', description: 'Songket Palembang oranye dan merah tua untuk tekstur kaya yang selaras dengan rona hangat Anda.', colors: ['Deep Orange', 'Red', 'Gold'] },
                 ],
                 skincareTip: 'Use a BB cream or foundation with a subtle yellow or golden base to keep your skin looking fresh and avoid pink-based makeup.',
@@ -149,7 +149,7 @@
                 ],
                 outfitTip: 'Cool undertones shine in high-contrast and jewel tones. A crisp white shirt or neutral gray jackets balance your look perfectly.',
                 outfits: [
-                    { item: 'Blazer Set', color: 'Charcoal Gray', reason: `Warna abu-abu gelap memberikan kontras tinggi yang sempurna untuk cool tone.`, imageUrl: 'https://placehold.co/400x150/36454F/FFFFFF?text=Blazer+dan+Celana+Abu+Charcoal' },
+                    { item: 'Blazer Set', color: 'Charcoal Gray', reason: `Warna abu-abu gelap memberikan kontras tinggi yang sempurna untuk cool tone.`, imageUrl: 'https://www.russ.co.id/cdn/shop/files/ginee_20230905170323117_1172060070_800x.png?v=1739795370' },
                     { item: 'Kemeja Putih', color: 'Bright White', reason: `Putih murni menciptakan kontras bersih yang menonjolkan kulit sejuk Anda.`, imageUrl: 'https://placehold.co/400x150/FFFFFF/000000?text=Kemeja+Putih+Crisp+Berkerah' },
                     { item: 'Kalung Minimalis', color: 'Silver/Platinum', reason: `Logam perak dan platinum memancarkan cahaya sejuk yang indah.`, imageUrl: 'https://placehold.co/400x150/C0C0C0/33303A?text=Kalung+Perak+Rantai+Tipis' }, 
                     { item: 'Dress Midi', color: 'Navy Blue', reason: `Biru tua dingin meningkatkan kejernihan warna kulit Anda.`, imageUrl: 'https://placehold.co/400x150/000080/FFFFFF?text=Dress+Midi+Biru+Navy' }, 
@@ -174,7 +174,7 @@
                 ],
                 outfitTip: 'As a Neutral, you have flexibility! Experiment with colors on both ends of the spectrum, focusing on muted, mid-range shades.',
                 outfits: [
-                    { item: 'Blouse Satin', color: 'Teal', reason: `Warna seimbang yang berfungsi baik dengan elemen hangat dan dingin.`, imageUrl: 'https://placehold.co/400x150/008080/FFFFFF?text=Blouse+Satin+Hijau+Teal' },
+                    { item: 'Blouse Satin', color: 'Teal', reason: `Warna seimbang yang berfungsi baik dengan elemen hangat dan dingin.`, imageUrl: 'https://www.russ.co.id/cdn/shop/files/ginee_20230905170323117_1172060070_800x.png?v=1739795370' },
                     { item: 'Celana Panjang', color: 'Stone Gray', reason: `Memberikan tampilan bersih, seimbang tanpa mendominasi rona Anda.`, imageUrl: 'https://placehold.co/400x150/A8A8A8/33303A?text=Celana+Panjang+Abu+Muda' },
                     { item: 'Cardigan', color: 'Dusty Rose', reason: `Warna lembut, feminin yang menambah kehangatan tanpa bentrokan.`, imageUrl: 'https://placehold.co/400x150/F2D7DA/33303A?text=Cardigan+Rajut+Dusty+Rose' },
                     { item: 'Sepatu Loafers', color: 'Chocolate Brown', reason: `Warna cokelat netral yang solid dan serbaguna.`, imageUrl: 'https://placehold.co/400x150/7B3F00/FFFFFF?text=Sepatu+Loafers+Coklat' },
@@ -889,3 +889,4 @@
 </body>
 
 </html>
+
