--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     { item: 'Sepatu Loafers', color: 'Chocolate Brown', reason: `Warna cokelat netral yang solid dan serbaguna.`, imageUrl: 'https://placehold.co/400x150/7B3F00/FFFFFF?text=Sepatu+Loafers+Coklat' },
                 ],
                 cultural: [
-                    { style: 'Modern Kebaya', description: 'Kebaya modern dengan renda abu-abu arang dan lapisan **Warm Sand** menawarkan tampilan yang seimbang dan elegan.', imageUrl: 'https://raw.githubusercontent.com/username/repo/main/images/blouse_peach_casual_pria.jpeg',colors: ['Soft Charcoal', 'Warm Sand', 'Beige'] },
+                    { style: 'Modern Kebaya', description: 'Kebaya modern dengan renda abu-abu arang dan lapisan **Warm Sand** menawarkan tampilan yang seimbang dan elegan.', imageUrl: 'https://www.russ.co.id/cdn/shop/files/ginee_20230905170323117_1172060070_800x.png?v=1739795370',colors: ['Soft Charcoal', 'Warm Sand', 'Beige'] },
                     { style: 'Lombok Tenun', description: 'Tenun Lombok dengan pola halus dalam campuran biru dan merah muda memberikan kecerahan yang seimbang.', colors: ['Teal', 'Dusty Rose', 'Cream'] },
                 ],
                 skincareTip: 'You can wear gold or silver jewelry. When choosing makeup, blend neutral and warm/cool products (e.g., a mix of peach and rose blush) for best results).',
@@ -889,4 +889,5 @@
 </body>
 
 </html>
+
 
