--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
                 ],
                 outfitTip: 'Warm undertones look radiant in earth tones. Try soft beige tops to highlight your natural glow and always choose gold jewelry.',
                 outfits: [
-                    { item: 'Kemeja Linen', color: 'Soft Beige', reason: `Aksen warna netral hangat yang sempurna untuk kegiatan sehari-hari.`, imageUrl: 'https://www.russ.co.id/cdn/shop/files/ginee_20230905170323117_1172060070_800x.png?v=1739795370' },
+                    { item: 'Kemeja Linen', color: 'Soft Beige', reason: `Aksen warna netral hangat yang sempurna untuk kegiatan sehari-hari.`, imageUrl: 'https://placehold.co/400x150/F5F5DC/33303A?text=Kemeja+Linen+Coklat+Muda' },
                     { item: 'Celana Kulot', color: 'Terracotta', reason: `Memberikan warna dasar yang kaya dan seimbang.`, imageUrl: 'https://placehold.co/400x150/E2725B/FFFFFF?text=Celana+Kulot+Merah+Bata' },
                     { item: 'Aksesori Emas', color: 'Gold (Kuning)', reason: `Emas melengkapi rona hangat kulit Anda secara alami.`, imageUrl: 'https://placehold.co/400x150/FFD700/000000?text=Anting+Emas+Model+Simple' },
                     { item: 'Scarf Motif', color: 'Mustard', reason: `Bawa warna komplementer dekat dengan wajah Anda.`, imageUrl: 'https://placehold.co/400x150/FFDB58/33303A?text=Scarf+Motif+Coklat+Kuning' },
                 ],
                 cultural: [
-                    { style: 'Balinese Kebaya', description: 'Kebaya dengan sulaman **emas** yang rumit meningkatkan kehangatan Anda.', imageUrl: 'https://www.russ.co.id/cdn/shop/files/ginee_20230905170323117_1172060070_800x.png?v=1739795370', colors: ['Gold', 'Dark Red'] },
+                    { style: 'Balinese Kebaya', description: 'Kebaya dengan sulaman **emas** yang rumit meningkatkan kehangatan Anda.', colors: ['Gold', 'Dark Red'] },
                     { style: 'Palembang Songket', description: 'Songket Palembang oranye dan merah tua untuk tekstur kaya yang selaras dengan rona hangat Anda.', colors: ['Deep Orange', 'Red', 'Gold'] },
                 ],
                 skincareTip: 'Use a BB cream or foundation with a subtle yellow or golden base to keep your skin looking fresh and avoid pink-based makeup.',
@@ -149,7 +149,7 @@
                 ],
                 outfitTip: 'Cool undertones shine in high-contrast and jewel tones. A crisp white shirt or neutral gray jackets balance your look perfectly.',
                 outfits: [
-                    { item: 'Blazer Set', color: 'Charcoal Gray', reason: `Warna abu-abu gelap memberikan kontras tinggi yang sempurna untuk cool tone.`, imageUrl: 'https://www.russ.co.id/cdn/shop/files/ginee_20230905170323117_1172060070_800x.png?v=1739795370' },
+                    { item: 'Blazer Set', color: 'Charcoal Gray', reason: `Warna abu-abu gelap memberikan kontras tinggi yang sempurna untuk cool tone.`, imageUrl: 'https://placehold.co/400x150/36454F/FFFFFF?text=Blazer+dan+Celana+Abu+Charcoal' },
                     { item: 'Kemeja Putih', color: 'Bright White', reason: `Putih murni menciptakan kontras bersih yang menonjolkan kulit sejuk Anda.`, imageUrl: 'https://placehold.co/400x150/FFFFFF/000000?text=Kemeja+Putih+Crisp+Berkerah' },
                     { item: 'Kalung Minimalis', color: 'Silver/Platinum', reason: `Logam perak dan platinum memancarkan cahaya sejuk yang indah.`, imageUrl: 'https://placehold.co/400x150/C0C0C0/33303A?text=Kalung+Perak+Rantai+Tipis' }, 
                     { item: 'Dress Midi', color: 'Navy Blue', reason: `Biru tua dingin meningkatkan kejernihan warna kulit Anda.`, imageUrl: 'https://placehold.co/400x150/000080/FFFFFF?text=Dress+Midi+Biru+Navy' }, 
@@ -174,13 +174,13 @@
                 ],
                 outfitTip: 'As a Neutral, you have flexibility! Experiment with colors on both ends of the spectrum, focusing on muted, mid-range shades.',
                 outfits: [
-                    { item: 'Blouse Satin', color: 'Teal', reason: `Warna seimbang yang berfungsi baik dengan elemen hangat dan dingin.`, imageUrl: 'https://www.russ.co.id/cdn/shop/files/ginee_20230905170323117_1172060070_800x.png?v=1739795370' },
+                    { item: 'Blouse Satin', color: 'Teal', reason: `Warna seimbang yang berfungsi baik dengan elemen hangat dan dingin.`, imageUrl: 'https://placehold.co/400x150/008080/FFFFFF?text=Blouse+Satin+Hijau+Teal' },
                     { item: 'Celana Panjang', color: 'Stone Gray', reason: `Memberikan tampilan bersih, seimbang tanpa mendominasi rona Anda.`, imageUrl: 'https://placehold.co/400x150/A8A8A8/33303A?text=Celana+Panjang+Abu+Muda' },
                     { item: 'Cardigan', color: 'Dusty Rose', reason: `Warna lembut, feminin yang menambah kehangatan tanpa bentrokan.`, imageUrl: 'https://placehold.co/400x150/F2D7DA/33303A?text=Cardigan+Rajut+Dusty+Rose' },
                     { item: 'Sepatu Loafers', color: 'Chocolate Brown', reason: `Warna cokelat netral yang solid dan serbaguna.`, imageUrl: 'https://placehold.co/400x150/7B3F00/FFFFFF?text=Sepatu+Loafers+Coklat' },
                 ],
                 cultural: [
-                    { style: 'Modern Kebaya', description: 'Kebaya modern dengan renda abu-abu arang dan lapisan **Warm Sand** menawarkan tampilan yang seimbang dan elegan.', imageUrl: 'https://www.russ.co.id/cdn/shop/files/ginee_20230905170323117_1172060070_800x.png?v=1739795370',colors: ['Soft Charcoal', 'Warm Sand', 'Beige'] },
+                    { style: 'Kebaya Modern Batik', description: 'Kebaya berkerah tinggi dengan motif floral **navy/hitam** dan bawahan batik cokelat hangat. Kombinasi yang sangat seimbang untuk Neutral Tone.', colors: ['Soft Charcoal', 'Chocolate Brown', 'Beige'] },
                     { style: 'Lombok Tenun', description: 'Tenun Lombok dengan pola halus dalam campuran biru dan merah muda memberikan kecerahan yang seimbang.', colors: ['Teal', 'Dusty Rose', 'Cream'] },
                 ],
                 skincareTip: 'You can wear gold or silver jewelry. When choosing makeup, blend neutral and warm/cool products (e.g., a mix of peach and rose blush) for best results).',
@@ -459,8 +459,13 @@
                 const culturalContainer = document.getElementById('cultural-recs');
                 culturalContainer.innerHTML = '';
                 result.cultural.forEach(c => {
+                     // Generate a placeholder image for cultural outfits
+                    const encodedStyle = encodeURIComponent(c.style.replace(/\s/g, '+'));
+                    const culturalImageUrl = `https://placehold.co/400x150/F6EFE7/33303A?text=${encodedStyle}`;
+
                     culturalContainer.innerHTML += `
                         <div class="card p-4 border-l-4 border-sage-green/70">
+                            <img src="${culturalImageUrl}" alt="${c.style}" class="outfit-image" onerror="this.onerror=null; this.src='https://placehold.co/400x150/C7D8C4/33303A?text=Cultural+Outfit+Placeholder'">
                             <h3 class="font-semibold text-lg text-soft-charcoal">${c.style}</h3>
                             <p class="text-sm mt-1 text-soft-charcoal/80">${c.description}</p>
                             <div class="mt-2 flex space-x-2">
@@ -887,7 +892,4 @@
         </section>
     </div>
 </body>
-
 </html>
-
-
